# dfilemanager

./: .directory  .travis.yml  CMakeLists.txt  README.md  actions.cpp  application.cpp  application.h  columnsview.cpp  columnsview.h  columnswidget.cpp  columnswidget.h  config.cpp  config.h  dbuscalls.h  deletedialog.cpp  deletedialog.h  detailsview.cpp  detailsview.h  devicemanager.cpp  devicemanager.h  devices.cpp  devices.h  dfm.desktop  dfm.pro  dockwidget.cpp  dockwidget.h  filesystemmodel.cpp  filesystemmodel.h  flowview.cpp  flowview.h  icondialog.cpp  icondialog.h  iconprovider.cpp  iconprovider.h  iconview.cpp  iconview.h  infowidget.cpp  infowidget.h  interfaces.h  iojob.cpp  (+30 more)
.github/workflows/: main.yml
Proxystyle/: proxystyle.cpp  proxystyle.h
dfm/: CMakeLists.txt  Makefile  actions.cpp  application.cpp  application.h  columnsview.cpp  columnsview.h  columnswidget.cpp  columnswidget.h  columnview.cpp  columnview.h  commanddialog.cpp  commanddialog.h  config.cpp  config.h  dataloader.cpp  dataloader.h  datasloader.cpp  deletedialog.cpp  deletedialog.h  detailsview.cpp  detailsview.h  devices.cpp  devices.h  dfm.desktop  dfm.pro  dockwidget.cpp  dockwidget.h  filesystemmodel.cpp  filesystemmodel.h  flow.cpp  flow.h  flowview.cpp  flowview.h  fsmodel.cpp  fsmodel.h  fsnode.cpp  fsnode.h  fsworkers.cpp  fsworkers.h  (+45 more)
plugins/: .directory  CMakeLists.txt  plugins.pro
plugins/ThumbsImages/: .directory  CMakeLists.txt  ThumbsImages.pro  thumbsimages.cpp  thumbsimages.h
plugins/ThumbsMovies/: CMakeLists.txt  ThumbsMovies.pro  thumbsmovies.cpp  thumbsmovies.h
plugins/ThumbsPDF/: CMakeLists.txt  ThumbsPDF.pro  thumbspdf.cpp  thumbspdf.h
plugins/ThumbsText/: CMakeLists.txt  ThumbsText.pro  thumbstext.cpp  thumbstext.h
plugins/ThumbsVideos/: CMakeLists.txt  ThumbsVideos.pro  thumbsvideos.cpp  thumbsvideos.h
